--- a/src/templates/standard.pug
+++ b/src/templates/standard.pug
@@ -1,6 +1,7 @@
 html
   head
     title!= title
+    link(rel='stylesheet' type='text/css' href='css/main.css')
   body
     include ../components/header
     p!= text
