--- a/app/modules/_elements/article.hbs
+++ b/app/modules/_elements/article.hbs
@@ -1,8 +1,9 @@
 <div class="article">
+    <h3>Article</h3>
     <br>
     <img src="{{imageSRC}}" />
     <br>
     <br>
-    <h2>{{headline}}</h2>
+    <h2>{{title}}</h2>
     <p>{{text}}</p>
 </div>
