--- a/app/modules/navigation/navigation.hbs
+++ b/app/modules/navigation/navigation.hbs
@@ -1,6 +1,6 @@
 <div class="main-navigation">
     <h3>Navigation</h3>
-    {{#each global.routes}}
-        <a href="{{this.href}}" title="{{this.label}}">{{this.label}}</a>
+    {{#each navigation}}
+        <a href="{{this.href}}" title="{{this.title}}">{{this.title}}</a>
     {{/each}}
 </div>
